next-tavla/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --main-background-color: var(--colors-brand-white);
        --secondary-background-color: var(--colors-greys-grey80);
        --tertiary-background-color: var(--colors-blues-blue60);

        --main-text-color: var(--colors-brand-blue);
        --secondary-text-color: var(--colors-greys-grey60);
        --tertiary-text-color: var(--colors-greys-grey50);
        --highlight-text-color: var(--colors-brand-coral);

        --error-color: var(--colors-validation-lava);
        --warning-color: var(--colors-misc-black);
        --success-color: var(--colors-validation-mint);

        --estimated-time-color: var(--colors-validation-lava);
        --divider-color: var(--colors-blues-blue20);
        --border-color: var(--colors-greys-grey60);

        --metro-color: var(--colors-transport-default-metro);
        --bus-color: var(--colors-transport-default-bus);
        --tram-color: var(--colors-transport-default-tram);
        --funicular-color: var(--colors-transport-default-funicular);
        --cableway-color: var(--colors-transport-default-cableway);
        --rail-color: var(--colors-transport-default-train);
        --air-color: var(--colors-transport-default-plane);
        --coach-color: var(--colors-transport-default-bus);
        --lift-color: var(--colors-transport-default-cableway);
        --monorail-color: var(--colors-transport-default-tram);
        --trolleybus-color: var(--colors-transport-default-bus);
        --unknown-color: var(--colors-transport-default-walk);
        --water-color: var(--colors-transport-default-ferry);
    }

    [data-theme='dark'] {
        --main-background-color: var(--colors-misc-black);
        --secondary-background-color: var(--colors-greys-grey);
        --tertiary-background-color: var(--colors-blues-blue30);

        --main-text-color: var(--colors-brand-white);
        --secondary-text-color: var(--colors-brand-lavender);
        --tertiary-text-color: var(--colors-greys-grey50);
        --highlight-text-color: var(--colors-brand-coral);

        --error-color: var(--colors-validation-lava-contrast);
        --warning-color: var(--colors-validation-canary-contrast);
        --success-color: #75daad;

        --estimated-time-color: var(--colors-brand-coral);
        --divider-color: var(--colors-blues-blue20);
        --border-color: var(--colors-greys-grey10);

        --metro-color: var(--colors-transport-contrast-metro);
        --bus-color: var(--colors-transport-contrast-bus);
        --tram-color: var(--colors-transport-contrast-tram);
        --funicular-color: var(--colors-transport-contrast-funicular);
        --cableway-color: var(--colors-transport-contrast-cableway);
        --rail-color: var(--colors-transport-contrast-train);
        --air-color: var(--colors-transport-contrast-plane);
        --coach-color: var(--colors-transport-contrast-bus);
        --lift-color: var(--colors-transport-contrast-cableway);
        --monorail-color: var(--colors-transport-contrast-tram);
        --trolleybus-color: var(--colors-transport-contrast-bus);
        --unknown-color: var(--colors-transport-contrast-walk);
        --water-color: var(--colors-transport-contrast-ferry);
    }

    [data-theme='entur'] {
        --main-background-color: var(--colors-brand-blue);
        --secondary-background-color: var(--colors-blues-blue10);
        --tertiary-background-color: var(--colors-blues-blue30);

        --main-text-color: var(--colors-brand-white);
        --secondary-text-color: var(--colors-brand-lavender);
        --tertiary-text-color: var(--colors-blues-blue60);
        --highlight-text-color: var(--colors-brand-coral);

        --error-color: var(--colors-validation-lava-contrast);
        --warning-color: var(--colors-validation-canary-contrast);
        --success-color: #75daad;

        --estimated-time-color: var(--colors-brand-coral);
        --divider-color: var(--colors-blues-blue20);
        --border-color: var(--colors-blues-blue30);

        --metro-color: var(--colors-transport-contrast-metro);
        --bus-color: var(--colors-transport-contrast-bus);
        --tram-color: var(--colors-transport-contrast-tram);
        --funicular-color: var(--colors-transport-contrast-funicular);
        --cableway-color: var(--colors-transport-contrast-cableway);
        --rail-color: var(--colors-transport-contrast-train);
        --air-color: var(--colors-transport-contrast-plane);
        --coach-color: var(--colors-transport-contrast-bus);
        --lift-color: var(--colors-transport-contrast-cableway);
        --monorail-color: var(--colors-transport-contrast-tram);
        --trolleybus-color: var(--colors-transport-contrast-bus);
        --unknown-color: var(--colors-transport-contrast-walk);
        --water-color: var(--colors-transport-contrast-ferry);
    }

    html {
        background-color: var(--main-background-color);
    }

    body {
        color: var(--main-text-color);
        font-family: Nationale, Arial, Gotham Rounded, -apple-system,
            BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell,
            Helvetica Neue, sans-serif;
        font-size: 16px;
        font-weight: 400;
        line-height: 1.2;
        min-height: 100vh;
        display: flex;
        flex-direction: column;
    }

    main {
        flex-grow: 1;
    }

    h3 {
        font-weight: 500;
    }

    ul {
        list-style-type: none;
    }

    input::-webkit-outer-spin-button,
    input::-webkit-inner-spin-button {
        -webkit-appearance: none;
        margin: 0;
    }

    input[type='number'] {
        -moz-appearance: textfield;
        appearance: textfield;
    }
}

@layer components {
    .primaryButton {
        background-color: var(--main-background-color);
    }

    .primaryButton:hover {
        background-color: var(--secondary-background-color);
    }

    .secondaryButton {
        background-color: var(--secondary-background-color);
    }

    .secondaryButton:hover {
        background-color: var(--tertiary-background-color);
    }

    .visuallyHidden {
        clip: rect(0 0 0 0);
        clip-path: inset(50%);
        height: 1px;
        overflow: hidden;
        position: absolute;
        white-space: nowrap;
        width: 1px;
    }

    .box {
        width: 100%;
        border-radius: 0.5em;
        padding: 2em;
        background: var(--secondary-background-color);
    }

    .publicCode {
        background-color: var(--tertiary-background-color);
        padding: 0.35em 0.5em;
        border-radius: 0.5em;
    }

    /* For Tavla using pages */

    .root {
        width: 100%;
        height: 100%;
        min-height: 100vh;
        box-sizing: inherit;
        font-size: 3vmin;
        padding: 0 1em;
        background-color: var(--main-background-color);
    }

    .rootContainer {
        display: flex;
        flex-direction: column;
        height: 100vh;
        width: 100%;
        gap: 0.75em;
        overflow: hidden;
        padding: 1em 0;
    }

    @supports not (gap: 0.75em) {
        .rootContainer > * {
            margin: 0.75em;
        }
    }
}

